Using min-height on vh units to stop overlapping

--- a/main.css
+++ b/main.css
@@ -530,7 +530,7 @@ html #top-button img {
 
 .intro {
     padding: 120px 100px;
-    height: 100vh;
+    min-height: 100vh;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -541,7 +541,7 @@ html #top-button img {
     -ms-flex-pack: distribute;
     justify-content: space-around;
     max-width: 1440px;
-    margin: 0 auto
+    margin: 0 auto;
 }
 
 @media screen and (max-width:630px) {
@@ -1328,7 +1328,7 @@ html #top-button img {
 
 .not-found {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
